--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,7 @@
   ======================================================== -->
 </head>
 
-<body onload="visualizarLancamentos()">
+<body onload="visualizarDRE()">
 
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top d-flex align-items-center">
