--- a/sobrenos.html
+++ b/sobrenos.html
@@ -267,31 +267,111 @@
 
 
     <!-- Vonlutários-->
+    <div class="text-center mx-auto pb-5 wow fadeIn equipe-margem" data-wow-delay=".3s" style="max-width: 600px;"><br><br>
+      <h2>Voluntários que auxiliaram no desenvolvimento </h2>
+    </div>
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
 
+        <div class="swiper-slide">
+          <img src="./assets/imagens/Paulo_Henrique-removebg-preview.png" height="400px" alt="">
+          <p>Paulo H. Nunes<br>Back-End</p>
+        </div>
 
-      <!-- Swiper -->
-      <div class="text-center mx-auto pb-5 wow fadeIn equipe-margem" data-wow-delay=".3s" style="max-width: 600px;">
-        <h2> Voluntários que auxiliaram no desenvolvimento </h2>
+        <div class="swiper-slide">
+          <img src="./assets/imagens/Rafael.vol-removebg-preview.png" height="400px" alt="">
+          <p>Rafael Biasiol<br>Front-End</p>
+        </div>
+
+        <div class="swiper-slide">
+          <img src="./assets/imagens/Thiago_Lucena.png" height="400px" alt="">
+          <p>Thiago Lucena <br>Back-End</p>
+        </div>
+
       </div>
-      <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-  
-          <div class="swiper-slide">
-            <img src="./assets/imagens/Paulo_Henrique-removebg-preview.png" height="400px" alt="">
-            <p>Paulo H. Nunes<br>Back-End</p>
-          </div>
-  
-          <div class="swiper-slide">
-            <img src="./assets/imagens/Rafael.vol-removebg-preview.png" height="400px" alt="">
-            <p>Rafael Biasiol<br>Front-End</p>
-          </div>
-  
-          <div class="swiper-slide">
-            <img src="./assets/imagens/Thiago_Lucena.png" height="400px" alt="">
-            <p>Thiago Lucena <br>Back-End</p>
+      <div class="swiper-pagination"></div>
+    </div>
+     
+    <!-- por que doar -->
+    <div class="about_section layout_padding d-flex">
+      <div class="container">
+        </div>
+      </div>
+      <div class="about_section_2">
+        <div class="container">
+
+          <div class="col-md-12 text-center">
+            <h2 class="doacao">Perspectivas</h2>
+            <p>A EMP não para por aqui estamos empoderando ainda mais o crescimento</p>
           </div>
 
-     
+          <div class="row">
+              <div class="col-md-6 alinhar">
+                <div class="about_img"><img src="./assets/img/Controle-de-Estoque-1.png" class="img-fluid w-100 rounded"></div>
+            </div>
+              <div class="col-md-6 alinhar">
+                  <div class="about_taital_main mx-auto">
+                    <h2 class="text-center">Controle de estoque</h2>
+                    <p class="about_text doe mx-auto">
+                      Controle de estoque é o processo de gerenciar e monitorar os bens e produtos que uma 
+                     empresa possui em seus estoques. Esse sistema visa garantir a disponibilidade adequada de mercadorias para 
+                     atender à demanda.
+                      </p>
+                  </div>
+              </div>
+          </div>
+
+          <div class="row">
+              <div class="col-md-6 alinhar">
+                <div class="about_img"><img src="./assets/img/nota-fiscal.png" class="img-fluid w-100 rounded"></div>
+            </div>
+              <div class="col-md-6 alinhar">
+                <div class="about_taital_main mx-auto">
+                  <h2 class="text-center">Nota fiscal</h2>
+                    <p class="about_text doe mx-auto">
+                      A nota fiscal é um documento fiscal que formaliza transações comerciais, registrando a venda de produtos ou a prestação de serviços.
+                     Armazenar e gerar diretamente na plataforma, em um periodo de cinco anos, permitindo facilidade em cumprir seus deveres fiscais.
+                    </p>
+                </div>
+              </div>
+          </div>
+
+          <div class="row">
+              <div class="col-md-6 alinhar">
+                <div class="about_img"><img src="./assets/img/Wavy_Tech-.jpg" class="img-fluid w-100 rounded"></div>
+            </div>
+              <div class="col-md-6 alinhar">
+                <div class="about_taital_main mx-auto">
+                  <h2 class="text-center">Pagamento de impostos</h2>
+                    <p class="about_text doe mx-auto">
+                      Uma integração, onde a meta é simplificar o pagamento de uma forma menos complexa
+                    </p>
+                </div>
+              </div>
+          </div>
+
+            <div class="row">
+              <div class="col-md-6 alinhar">
+                <div class="about_img"><img src="./assets/img/celular-emp.png" class="img-fluid w-100 rounded"></div>
+                </div>
+                  <div class="col-md-6 alinhar">
+                    <div class="about_taital_main mx-auto">
+                      <h2 class="text-center">Aplicativo mobile</h2>
+                        <p class="about_text doe mx-auto">
+                          O aplicativo móvel oferece acesso fácil e rápido as funcionalidades da plataforma a qualquer 
+                          momento e em qualquer lugar. Isso aumenta a eficiência para nossas usuárias, permitindo-lhes realizar tarefas de 
+                          forma mais ágil. 
+                        </p>
+                    </div>
+                  </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- por que doar -->
+
      <!-- ======= Counts Section ======= -->
   <section id="counts" class="counts section-bg cor-sobrenos" style="background-image: url('./assets/imagens/fundo.png'); background-repeat: no-repeat  ;">
     <div class="container">
