--- a/dashboard.html
+++ b/dashboard.html
@@ -277,14 +277,14 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="dashboard.html">
+        <a class="nav-link " href="./dashboard.html">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="transacoes.html">
+        <a class="nav-link collapsed" href="./transacoes.html">
           <i class="bi bi-gem"></i>
           <span>Transações</span>
         </a>
@@ -296,21 +296,21 @@
         </a>
 
         <li class="nav-item">
-          <a class="nav-link collapsed" href="users-profile.html">
+          <a class="nav-link collapsed" href="./users-profile.html">
             <i class="bi bi-person"></i>
             <span>Perfil</span>
           </a>
         </li><!-- End Profile Page Nav -->
 
         <li class="nav-item">
-          <a class="nav-link collapsed" href="pages-faq.html">
+          <a class="nav-link collapsed" href="./pages-faq.html">
             <i class="bi bi-question-circle"></i>
             <span>Perguntas Frequentes</span>
           </a>
         </li><!-- End F.A.Q Page Nav -->
         
         <li class="nav-item">
-          <a class="nav-link collapsed" href="pages-contact.html">
+          <a class="nav-link collapsed" href="./pages-contact.html">
             <i class="bi bi-envelope"></i>
             <span>Contato</span>
           </a>
@@ -324,7 +324,7 @@
       <h1>Dashboard</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="dashboard.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="./dashboard.html">Home</a></li>
           <li class="breadcrumb-item active">Dashboard</li>
         </ol>
       </nav>
