--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <li><a href="doe.html">Doe</a></li>
         <li><a href="networking.html">Networking</a></li>
         <li><a href="./emocional.html">Emocional</a></li>
-        <li><a href="pricing.html">Contato</a></li>
+        <li><a href="./contact.html">Contato</a></li>
 
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
