--- a/users-profile.html
+++ b/users-profile.html
@@ -38,22 +38,22 @@
   ======================================================== -->
 </head>
 
-<body>
+<body onload="obterInformacoesUsuario()">
 
  <!-- ======= Header ======= -->
  <header id="header" class="header fixed-top d-flex align-items-center">
 
   <div class="d-flex align-items-center justify-content-between">
-    <a href="index.html" class="logo d-flex align-items-center">
+    <a href="dashboard.html" class="logo d-flex align-items-center">
       <img src="assets/img/logo.png" alt="">
-      <span class="d-none d-lg-block">EMP</span>
+      <span class="d-none d-lg-block"><img src="assets/imagens/logo_emp3.png" style="max-height: 46px;"></span>
     </a>
     <i class="bi bi-list toggle-sidebar-btn"></i>
   </div><!-- End Logo -->
 
   <div class="search-bar">
     <form class="search-form d-flex align-items-center" method="POST" action="#">
-      <input type="text" name="query" placeholder="Search" title="Enter search keyword">
+      <input type="text" name="query" placeholder="Pesquisar" title="Enter search keyword">
       <button type="submit" title="Search"><i class="bi bi-search"></i></button>
     </form>
   </div><!-- End Search Bar -->
@@ -211,8 +211,8 @@
       <li class="nav-item dropdown pe-3">
 
         <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-          <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-          <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+          <img src="assets/img/undefined.jpg" alt="Profile" class="rounded-circle">
+          <span class="d-none d-md-block dropdown-toggle ps-2 nomeElement"></span>
         </a><!-- End Profile Iamge Icon -->
 
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
@@ -282,7 +282,7 @@
         </li><!-- End Dashboard Nav -->
   
         <li class="nav-item">
-          <a class="nav-link collapsed" href="pages-blank.html">
+          <a class="nav-link collapsed" href="transacoes.html">
             <i class="bi bi-gem"></i>
             <span>Transações</span>
           </a>
@@ -638,7 +638,9 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/mainFunction.js"></script>
+  <script src="assets/js/script-login.js"></script>
+  <script src="assets/js/fluxoCaixa.js"></script>
 
 </body>
 
