--- a/doe.html
+++ b/doe.html
@@ -58,6 +58,11 @@
   <!-- ======= Header ======= -->
   
  <header id="header" class="fixed-top">
+  <div class="social-links text-center text-md-right pt-3 pt-md-0">
+    <a href="https://www.facebook.com/people/EMP-Oficial/61554028190664/" class="facebook depois"><i class="bx bxl-facebook"></i></a>
+    <a href="https://www.instagram.com/emp_oficialsp/?hl=pt" class="instagram depois"><i class="bx bxl-instagram"></i></a>
+    <a href="http://www.linkedin.com/in/emp-oficial" class="linkedin depois"><i class="bx bxl-linkedin"></i></a>
+  </div>
   <div class="container d-flex align-items-center">
 
     <h1 class="logo me-auto"><a href="index.html"> <img src="./assets/imagens/logo_emp.png" alt="Logo EMP"></a></h1>
@@ -72,7 +77,7 @@
         <li><a class="active" href="doe.html">Doe</a></li>
         <li><a href="networking.html">Networking</a></li>
         <li><a href="./emocional.html">Emocional</a></li>
-        <li><a href="pricing.html">Contato</a></li>
+        <li><a href="./contact.html">Contato</a></li>
 
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
