--- a/events.html
+++ b/events.html
@@ -189,7 +189,7 @@
   </script>
 
 
-  <!-- API via cep -->
+  <!-- API VIA CEP -->
   <script>
     function consultaEndereco() {
         let cep = document.querySelector("#cep").value;
