CRUD e correção de bugs

--- a/events.html
+++ b/events.html
@@ -75,7 +75,7 @@
 
                 <div class="col-md-6">
                   <label for="inputDate" class="col-sm-12 col-form-label">Data de nascimento</label>
-                  <input type="text" class="form-control" id="dataNascimento" required>
+                  <input type="date" class="form-control" id="dataNascimento" required>
                 </div>
 
                 <div class="col-md-6">
