--- a/transacoes.html
+++ b/transacoes.html
@@ -38,7 +38,7 @@
   ======================================================== -->
 </head>
 
-<body onload="obterInformacoesUsuario(); visualizarLancamentos()">
+<body onload="obterInformacoesUsuario()">
 
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top d-flex align-items-center">
