--- a/dashboard.html
+++ b/dashboard.html
@@ -716,49 +716,49 @@
                       <tr>
                         <th scope="row">1</th>
                         <td>Receita Bruta</td>
-                        <td id="receitaBruta">R$ 2.145.000,00</td>
+                        <td id="receitaBruta">R$ 0,00</td>
                         <td>100%</td>
                         <td>10/12/2023</td>
                       </tr>
                       <tr>
                         <th scope="row">2</th>
                         <td>Dedução da Receita</td>
-                        <td id="deducaoReceita">-R$ 321.750,00</td>
+                        <td id="deducaoReceita">R$ 0,00</td>
                         <td>10,80%</td>
                         <td>10/12/2023</td>
                       </tr>
                       <tr>
                         <th scope="row">3</th>
                         <td>Receita Líquida</td>
-                        <td id="receitaLiquida">1.823.250,00</td>
+                        <td id="receitaLiquida">R$ 0,00</td>
                         <td>85%</td>
                         <td>10/12/2023</td>
                       </tr>
                       <tr>
                         <th scope="row">4</th>
                         <td>Custos</td>
-                        <td id="custos">-R$ 990.000,00</td>
+                        <td id="custos">R$ 0,00</td>
                         <td>46,15%</td>
                         <td>10/12/2023</td>
                       </tr>
                       <tr>
                         <th scope="row">5</th>
                         <td>Resultado Bruto</td>
-                        <td id="resultadoBruto">R$ 833.250,00</td>
+                        <td id="resultadoBruto">R$ 0,00</td>
                         <td>38,85%</td>
                         <td>10/12/2023</td>
                       </tr>
                       <tr>
                         <th scope="row">5</th>
                         <td>Despesas Operacionais</td>
-                        <td id="despesasOperacionais">-R$ 182.000,00</td>
+                        <td id="despesasOperacionais">R$ 0,00</td>
                         <td>8,49%</td>
                         <td>10/12/2023</td>
                       </tr>
                       <tr>
                         <th scope="row">5</th>
                         <td>Resultado Financeiro</td>
-                        <td id="resultadoFinanceiro">R$ 215.000,00</td>
+                        <td id="resultadoFinanceiro">R$ 0,00</td>
                         <td>10,02%</td>
                         <td>10/12/2023</td>
                       </tr>
@@ -772,21 +772,21 @@
                       <tr>
                         <th scope="row">5</th>
                         <td>IRPJ e CSLL</td>
-                        <td id="irpjCSLL">-R$ 66.000,00</td>
+                        <td id="irpjCSLL">R$ 0,00</td>
                         <td>3,08%</td>
                         <td>10/12/2023</td>
                       </tr>
                       <tr>
                         <th scope="row">5</th>
                         <td>Participações</td>
-                        <td id="participacoes">-R$ 0,00</td>
+                        <td id="participacoes">R$ 0,00</td>
                         <td>0,00%</td>
                         <td>10/12/2023</td>
                       </tr>
                       <tr>
                         <th scope="row">5</th>
                         <td><strong>Resultado Final do Exercício</strong></td>
-                        <td id="resultadoFinal">R$ 370.250,00</td>
+                        <td id="resultadoFinal">R$ 0,00</td>
                         <td>17,26%</td>
                         <td>10/12/2023</td>
                       </tr>
