Integração com Chatbot

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -148,7 +148,7 @@
 <section id="hero-sobre-nos" class="d-flex justify-content-center align-items-center">
   <img src="./assets/imagens/logo_emp3.png" alt="">
   <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-    <h1 class="text-center"> Conheça sobre a EMP<br> <span class="sobre-txt">E todas as pessoas que ajudaram a criar ela!</span></h1>
+    <h1 class="text-center">Conheça mais sobre a EMP<br> <span class="sobre-txt">E todas as pessoas que ajudaram a criar ela!</span></h1>
   </div>
 </section><!-- End Hero -->
 
@@ -175,7 +175,7 @@
             </div>
               <div class="about_taital_main mx-auto">
                  <p class="about_text mx-auto">
-                  A <span class="amarelo">EMP</span> não é apenas uma ideia; é o nosso negócio que surgiu a partir de nossas experiências pessoais, evidenciando necessidades compartilhadas por outras mulheres. Observamos aquelas que conseguiram ultrapassar barreiras sozinhas, e foi pensando nelas que criamos a EMP (<span class= "amarelo">Emp</span>oderando e <span class= "amarelo">Emp</span>reendendo). Nosso objetivo é auxiliar e proporcionar visibilidade, contribuindo para o empoderamento e sucesso de mulheres empreendedoras.
+                  A <span class="amarelo">EMP</span> não é apenas uma ideia; é o nosso negócio que surgiu de nossas experiências pessoais, evidenciando necessidades compartilhadas por outras mulheres. Observamos aquelas que conseguiram ultrapassar barreiras sozinhas, e foi pensando nelas que criamos a EMP (<span class= "amarelo">Emp</span>oderando e <span class= "amarelo">Emp</span>reendendo). Nosso objetivo é auxiliar e proporcionar visibilidade, contribuindo para o empoderamento e sucesso de mulheres empreendedoras.
                   </p>
               </div>
            </div>
@@ -273,17 +273,17 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
 
-        <div class="swiper-slide">
+        <div class="swiper-slide voluntario">
           <img src="./assets/imagens/Paulo_Henrique-removebg-preview.png" height="400px" alt="">
           <p>Paulo H. Nunes<br>Back-End</p>
         </div>
 
-        <div class="swiper-slide">
+        <div class="swiper-slide voluntario">
           <img src="./assets/imagens/Rafael.vol-removebg-preview.png" height="400px" alt="">
           <p>Rafael Biasiol<br>Front-End</p>
         </div>
 
-        <div class="swiper-slide">
+        <div class="swiper-slide voluntario">
           <img src="./assets/imagens/Thiago_Lucena.png" height="400px" alt="">
           <p>Thiago Lucena <br>Back-End</p>
         </div>
