--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,14 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+  <!-- Start ChatBot -->
+  <link rel="apple-touch-icon" type="image/png"
+    href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png">
+  <link rel="stylesheet" href="assets/css/chatbot.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/4.0.2/bootstrap-material-design.css"> -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- End ChatBot -->
+
   <!-- Favicons -->
   <link href="./assets/imagens/logo_empt3.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -213,7 +221,7 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="assets/img/undefined.jpg" alt="Profile" class="rounded-circle">
+            <img src="assets/imagens/perfil.png" alt="Profile" class="rounded-circle">
             <span class="d-none d-md-block dropdown-toggle ps-2 nomeElement"></span>
           </a><!-- End Profile Iamge Icon -->
 
@@ -286,7 +294,7 @@
       <li class="nav-item">
         <a class="nav-link collapsed" href="transacoes.html">
           <i class="bi bi-gem"></i>
-          <span>Transações</span>
+          <span>Fluxo de Caixa</span>
         </a>
       </li><!-- End Blank Page Nav -->
 
@@ -358,8 +366,6 @@
                     </div>
                     <div class="ps-3">
                       <h6 id="saldoAtual">R$ 0,00</h6>
-                      <span class="text-success small pt-1 fw-bold">12%</span> <span
-                        class="text-muted small pt-2 ps-1">increase</span>
 
                     </div>
                   </div>
@@ -381,8 +387,6 @@
                     </div>
                     <div class="ps-3">
                       <h6 id="receitas">R$ 0,00</h6>
-                      <span class="text-success small pt-1 fw-bold">8%</span> <span
-                        class="text-muted small pt-2 ps-1">increase</span>
 
                     </div>
                   </div>
@@ -403,8 +407,6 @@
                     </div>
                     <div class="ps-3">
                       <h6 id="despesas">R$ 0,00</h6>
-                      <span class="text-success small pt-1 fw-bold"><span class="text-danger">-3%</span></span>
-                      <span class="text-muted small pt-2 ps-1"><span class="text-danger">decrease</span></span>
 
                     </div>
                   </div>
@@ -426,8 +428,6 @@
                     </div>
                     <div class="ps-3">
                       <h6 id="saldoInicial">R$ 0,00</h6>
-                      <span class="text-success small pt-1 fw-bold">2%</span> <span
-                        class="text-muted small pt-2 ps-1">increase</span>
 
                     </div>
                   </div>
@@ -700,7 +700,7 @@
                 </div>
 
                 <div class="card-body pb-0">
-                  <h5 class="card-title">DRE <span>| Exercício</span></h5>
+                  <h5 class="card-title">DRE <span>| Este mês</span></h5>
 
                   <table class="table table-borderless">
                     <thead>
@@ -821,7 +821,7 @@
             </div>
 
             <div class="card-body">
-              <h5 class="card-title">Atividades Recentes <span>| Hoje</span></h5>
+              <h5 class="card-title">Atividades Recentes <span>| Esta semana</span></h5>
 
               <div class="activity">
 
@@ -829,7 +829,7 @@
                   <div class="activite-label">32 min</div>
                   <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>
                   <div class="activity-content">
-                    Quia quae rerum <a href="#" class="fw-bold text-dark">explicabo officiis</a> beatae
+                    Adicionou uma nova receita no valor de R$ 350,00
                   </div>
                 </div><!-- End activity item-->
 
@@ -837,39 +837,39 @@
                   <div class="activite-label">56 min</div>
                   <i class='bi bi-circle-fill activity-badge text-danger align-self-start'></i>
                   <div class="activity-content">
-                    Voluptatem blanditiis blanditiis eveniet
+                    Alterou o número de telefone
                   </div>
                 </div><!-- End activity item-->
 
                 <div class="activity-item d-flex">
-                  <div class="activite-label">2 hrs</div>
+                  <div class="activite-label">1 dia</div>
                   <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>
                   <div class="activity-content">
-                    Voluptates corrupti molestias voluptatem
+                    Adicionou uma despesa no valor de R$ 125,00
                   </div>
                 </div><!-- End activity item-->
 
                 <div class="activity-item d-flex">
-                  <div class="activite-label">1 day</div>
+                  <div class="activite-label">1 dia</div>
                   <i class='bi bi-circle-fill activity-badge text-info align-self-start'></i>
                   <div class="activity-content">
-                    Tempore autem saepe <a href="#" class="fw-bold text-dark">occaecati voluptatem</a> tempore
+                    Adicionou uma receita no valor de R$ 1000,00
                   </div>
                 </div><!-- End activity item-->
 
                 <div class="activity-item d-flex">
-                  <div class="activite-label">2 days</div>
+                  <div class="activite-label">1 dia</div>
                   <i class='bi bi-circle-fill activity-badge text-warning align-self-start'></i>
                   <div class="activity-content">
-                    Est sit eum reiciendis exercitationem
+                    Adicionou uma nova despesa no valor de R$ 800,00
                   </div>
                 </div><!-- End activity item-->
 
                 <div class="activity-item d-flex">
-                  <div class="activite-label">4 weeks</div>
+                  <div class="activite-label">2 dias</div>
                   <i class='bi bi-circle-fill activity-badge text-muted align-self-start'></i>
                   <div class="activity-content">
-                    Dicta dolorem harum nulla eius. Ut quidem quidem sit quas
+                    Adicionou Receita no valor de R$ 500,00
                   </div>
                 </div><!-- End activity item-->
 
@@ -968,7 +968,7 @@
             </div>
 
             <div class="card-body pb-0">
-              <h5 class="card-title">Website Traffic <span>| Mês</span></h5>
+              <h5 class="card-title">DRE <span>| Mês</span></h5>
 
               <div id="trafficChart" style="min-height: 400px;" class="echart"></div>
 
@@ -1081,8 +1081,34 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <div id="body">
+
+    <div id="chat-circle" class="btn btn-raised">
+      <div id="chat-overlay"></div>
+      <i class="material-icons">chat</i>
+    </div>
+
+    <div class="chat-box">
+      <div class="chat-box-header">
+        Assistente Virtual
+        <span class="chat-box-toggle"><i class="material-icons">close</i></span>
+      </div>
+      <div class="chat-box-body">
+        <div class="chat-box-overlay">
+        </div>
+        <div class="chat-logs">
+
+        </div><!--chat-log -->
+      </div>
+      <div class="chat-input">
+        <form>
+          <input type="text" id="chat-input" placeholder="Envie uma mensagem..." />
+          <button type="submit" class="chat-submit" id="chat-submit"><i class="material-icons">send</i></button>
+        </form>
+      </div>
+    </div>
+
+  </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
@@ -1095,11 +1121,14 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+  <script id="rendered-js" src="assets/js/chatbot.js"></script>
   <script src="assets/js/fluxoCaixa.js"></script>
   <script src="assets/js/mainFunction.js"></script>
   <script src="assets/js/script-login.js"></script>
-  
+
 
 </body>
 
