--- a/pages-faq.html
+++ b/pages-faq.html
@@ -9,6 +9,14 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+  <!-- Start ChatBot -->
+  <link rel="apple-touch-icon" type="image/png"
+    href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png">
+  <link rel="stylesheet" href="assets/css/chatbot.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/4.0.2/bootstrap-material-design.css"> -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- End ChatBot -->
+
   <!-- Favicons -->
   <link href="./assets/imagens/logo_empt3.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -211,7 +219,7 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="assets/img/undefined.jpg" alt="Profile" class="rounded-circle">
+            <img src="assets/imagens/perfil.png" alt="Profile" class="rounded-circle">
             <span class="d-none d-md-block dropdown-toggle ps-2 nomeElement"></span>
           </a><!-- End Profile Iamge Icon -->
 
@@ -284,7 +292,7 @@
       <li class="nav-item">
         <a class="nav-link collapsed" href="transacoes.html">
           <i class="bi bi-gem"></i>
-          <span>Transações</span>
+          <span>Fluxo de Caixa</span>
         </a>
       </li><!-- End Blank Page Nav -->
 
@@ -493,7 +501,34 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <div id="body">
+
+    <div id="chat-circle" class="btn btn-raised">
+      <div id="chat-overlay"></div>
+      <i class="material-icons">chat</i>
+    </div>
+
+    <div class="chat-box">
+      <div class="chat-box-header">
+        Assistente Virtual
+        <span class="chat-box-toggle"><i class="material-icons">close</i></span>
+      </div>
+      <div class="chat-box-body">
+        <div class="chat-box-overlay">
+        </div>
+        <div class="chat-logs">
+
+        </div><!--chat-log -->
+      </div>
+      <div class="chat-input">
+        <form>
+          <input type="text" id="chat-input" placeholder="Envie uma mensagem..." />
+          <button type="submit" class="chat-submit" id="chat-submit"><i class="material-icons">send</i></button>
+        </form>
+      </div>
+    </div>
+
+  </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
@@ -506,6 +541,9 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+  <script id="rendered-js" src="assets/js/chatbot.js"></script>
   <script src="assets/js/mainFunction.js"></script>
   <script src="assets/js/script-login.js"></script>
   <script src="assets/js/fluxoCaixa.js"></script>
