--- a/networking.html
+++ b/networking.html
@@ -327,7 +327,7 @@
     var style = document.createElement("style");
     style.appendChild(document.createTextNode(`
         body .uwy.userway_p1 .uai {
-            top: 393px !important;
+            top: 40vh !important;
             right: auto !important;
             bottom: auto !important;
             left: 98.8vw !important;
