--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </div>
 </header><!-- End Header -->
 
-<section class="home">
+<section class="home home_align">
   <div class="form_container">
     <i class="uil uil-times form_close"></i>
     <!-- Login From -->
